syntax = "proto2";

package common;
import "gogo.proto";

option go_package = "common";
option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

message University {
    optional int64 id = 1 [(gogoproto.moretags) = "db:\"id\"", (gogoproto.nullable) = false];
    optional string name = 2 [(gogoproto.moretags) = "db:\"name\"", (gogoproto.nullable) = false];
    optional string abbr = 3 [(gogoproto.moretags) = "db:\"abbr\"", (gogoproto.nullable) = false];
    optional string home_page = 4 [(gogoproto.moretags) = "db:\"home_page\"", (gogoproto.nullable) = false];
    optional string registration_page = 5 [(gogoproto.moretags) = "db:\"registration_page\"", (gogoproto.nullable) = false];
    optional string main_color = 6 [(gogoproto.moretags) = "db:\"main_color\"", (gogoproto.nullable) = false];
    optional string accent_color = 7 [(gogoproto.moretags) = "db:\"accent_color\"", (gogoproto.nullable) = false];
    optional string topic_name = 8 [(gogoproto.moretags) = "db:\"topic_name\"", (gogoproto.nullable) = false];
    repeated Subject subjects = 9;
    repeated Semester available_semesters = 10;
    repeated Registration registrations = 11;
    repeated Metadata metadata = 12;
}

message Response {
    optional Universities universities = 1;
    optional Subjects subjects = 2;
    optional Courses courses = 3;
    optional Sections sections = 4;
}

message Universities {
    repeated University universities = 1;
}

message Subjects {
    repeated Subject subjects = 1;
}

message Courses {
    repeated Course courses = 1;
}

message Sections {
    repeated Section section = 1;
}

message Subject {
    optional int64 id = 1 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"id\"", (gogoproto.nullable) = false];
    optional int64 university_id = 2 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"university_id\"", (gogoproto.nullable) = false];
    optional string name = 3 [(gogoproto.moretags) = "db:\"name\"", (gogoproto.nullable) = false];
    optional string number = 4 [(gogoproto.moretags) = "db:\"number\"", (gogoproto.nullable) = false];
    optional string season = 5 [(gogoproto.moretags) = "db:\"season\"", (gogoproto.nullable) = false];
    optional string year = 6 [(gogoproto.moretags) = "db:\"year\"", (gogoproto.nullable) = false];
    optional string topic_name = 7 [(gogoproto.moretags) = "db:\"topic_name\"", (gogoproto.nullable) = false];
    repeated Course courses = 9;
    repeated Metadata metadata = 10;

}

message Course {
    optional int64 id = 1 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"id\"", (gogoproto.nullable) = false];
    optional int64 subject_id = 2 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"subject_id\"", (gogoproto.nullable) = false];
    optional string name = 3 [(gogoproto.moretags) = "db:\"name\"", (gogoproto.nullable) = false];
    optional string number = 4 [(gogoproto.moretags) = "db:\"number\"", (gogoproto.nullable) = false];
    optional string synopsis = 5 [(gogoproto.moretags) = "db:\"synopsis\""];
    optional string topic_name = 7 [(gogoproto.moretags) = "db:\"topic_name\"", (gogoproto.nullable) = false];
    repeated Section sections = 9;
    repeated Metadata metadata = 10;
}

message Section {
    optional int64 id = 1 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"id\"", (gogoproto.nullable) = false];
    optional int64 course_id = 2 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"course_id\"", (gogoproto.nullable) = false];
    optional string number = 3 [(gogoproto.moretags) = "db:\"number\"", (gogoproto.nullable) = false];
    optional string call_number = 4 [(gogoproto.moretags) = "db:\"call_number\"", (gogoproto.nullable) = false];
    optional int64 max = 5 [(gogoproto.moretags) = "db:\"max\"", (gogoproto.nullable) = false];
    optional int64 now = 6 [(gogoproto.moretags) = "db:\"now\"", (gogoproto.nullable) = false];
    optional string status = 7 [(gogoproto.moretags) = "db:\"status\"", (gogoproto.nullable) = false];
    optional string credits = 8 [(gogoproto.moretags) = "db:\"credits\"", (gogoproto.nullable) = false];
    optional string topic_name = 9 [(gogoproto.moretags) = "db:\"topic_name\"", (gogoproto.nullable) = false];
    repeated Meeting meetings = 11;
    repeated Instructor instructors = 12;
    repeated Book books = 13;
    repeated Metadata metadata = 14;
}

message Meeting {
    optional int64 id = 1 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"id\"", (gogoproto.nullable) = false];
    optional int64 section_id = 2 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"section_id\"", (gogoproto.nullable) = false];
    optional string room = 3 [(gogoproto.moretags) = "db:\"room\""];
    optional string day = 4 [(gogoproto.moretags) = "db:\"day\""];
    optional string start_time = 5 [(gogoproto.moretags) = "db:\"start_time\""];
    optional string end_time = 6 [(gogoproto.moretags) = "db:\"end_time\""];
    optional string class_type = 7 [(gogoproto.moretags) = "db:\"class_type\""];
    optional int32 index = 8 [(gogoproto.moretags) = "db:\"index\"", (gogoproto.nullable) = false];
    repeated Metadata metadata = 9;
}
message Instructor {
    optional int64 id = 1 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"id\"", (gogoproto.nullable) = false];
    optional int64 section_id = 2 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"section_id\"", (gogoproto.nullable) = false];
    optional string name = 3 [(gogoproto.moretags) = "db:\"name\"", (gogoproto.nullable) = false];
    optional int32 index = 4 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"index\"", (gogoproto.nullable) = false];
}

message Book {
    optional int64 id = 1 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"id\"", (gogoproto.nullable) = false];
    optional int64 section_id = 2 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"section_id\"", (gogoproto.nullable) = false];
    optional string title = 3 [(gogoproto.moretags) = "db:\"title\"", (gogoproto.nullable) = false];
    optional string url = 4 [(gogoproto.moretags) = "db:\"url\"", (gogoproto.nullable) = false];
}

message Metadata {
    optional int64 id = 1 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"id\"", (gogoproto.nullable) = false];
    optional int64 university_id = 2 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"university_id\""];
    optional int64 subject_id = 3 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"subject_id\""];
    optional int64 course_id = 4 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"course_id\""];
    optional int64 section_id = 5 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"section_id\""];
    optional int64 meeting_id = 6 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"meeting_id\""];
    optional string title = 7 [(gogoproto.moretags) = "db:\"title\"", (gogoproto.nullable) = false];
    optional string content = 8 [(gogoproto.moretags) = "db:\"content\"", (gogoproto.nullable) = false];
}

message Registration {
    optional int64 id = 1 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"id\"", (gogoproto.nullable) = false];
    optional int64 university_id = 2 [(gogoproto.jsontag) = "-", (gogoproto.moretags) = "db:\"university_id\"", (gogoproto.nullable) = false];
    optional string period = 3 [(gogoproto.moretags) = "db:\"period\"", (gogoproto.nullable) = false];
    optional int64 period_date = 4 [(gogoproto.moretags) = "db:\"period_date\"", (gogoproto.nullable) = false];

}

message Semester {
    optional int32 year = 1 [(gogoproto.moretags) = "db:\"year\"", (gogoproto.nullable) = false];
    optional string season = 2 [(gogoproto.moretags) = "db:\"season\"", (gogoproto.nullable) = false];
}